--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.0",
     "@types/jest": "^23.3.13",
+    "@types/moxios": "^0.4.8",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "typescript": "^3.2.4",
-    "@types/enzyme": "^3.1.0"
+    "moxios": "^0.4.0",
+    "typescript": "^3.2.4"
   }
 }
